@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR_T4
skinparam classBackgroundColor MODEL_COLOR

package Model {

 package manager {

    package admin {
        class Admin
        class ModuleList
    }

    package card {
        class Card
    }

    package chapter {
        class CardList
        class Chapter
        class DueChapter
    }

    package history {
        class history
    }

    package module {
        class Module
        class ChapterList
    }
 }

package access {
Class Access
}
}

package Logic {
    Class HiddenLogic #FFFFFF
}

package Ui {
    Class HiddenUi #FFFFFF
}

Access ..> Admin : creates >
Access .left.> Module : creates >
Access ..> Chapter : creates >
Admin ..> ModuleList : contains >
ModuleList .down.> Module : manages >
Module ..> ChapterList: contains >
ChapterList .down.> Chapter: manages >
Chapter .down.> CardList: contains >
CardList .down.> Card: manages >
DueChapter .right.> Chapter: uses >

Logic .right.> Access
Ui ..> Access

@enduml